[gd_scene load_steps=5 format=3 uid="uid://2nutwfx2negc"]

[ext_resource type="Script" uid="uid://b7e84bdci5awp" path="res://entities/game_entities/Spells_&_Projectiles/black_hole/black_hole.gd" id="1_ffngd"]
[ext_resource type="Script" uid="uid://1p5qi568es5h" path="res://addons/audiom/classes/event_instance.gd" id="2_d8yv8"]
[ext_resource type="PackedScene" uid="uid://b3yg2qcbt1qsy" path="res://entities/game_entities/Spells_&_Projectiles/vfx_scenes/extra/blackHole/black_hole.tscn" id="3_q858p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yniru"]
size = Vector2(2120, 1224)

[node name="BlackHole" type="Node2D"]
script = ExtResource("1_ffngd")

[node name="BlackHoleArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="BlackHoleCollision" type="CollisionShape2D" parent="BlackHoleArea"]
position = Vector2(946, 526)
shape = SubResource("RectangleShape2D_yniru")
disabled = true

[node name="BlackHoleSFX" type="Node" parent="."]
script = ExtResource("2_d8yv8")
event_path = "SFX/Spells/BlackHole"
metadata/_custom_type_script = "uid://1p5qi568es5h"

[node name="Black_hole" parent="." instance=ExtResource("3_q858p")]
position = Vector2(938, 402)
